--- a/src/components/quizCard.css
+++ b/src/components/quizCard.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  padding: 60px;
-  width: 60vw;
+  padding: 3.5rem;
+  width: 80vw;
   border-radius: 15px;
 }
 
@@ -18,13 +18,16 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 50% 50%;
+  row-gap: 1rem;
+  column-gap: 1rem;
   margin: 0;
 }
 
 .quizcard__answer__buttons {
+  height: 100%;
+  width: 100%;
   font-family: "Lexend Deca", sans-serif;
-  margin: 10px;
-  padding: 15px;
+  padding: 1rem;
   cursor: pointer;
   border-radius: 10px;
   text-align: center;
